[gd_scene load_steps=79 format=2]

[ext_resource path="res://sprites/characters/right walk 2.png" type="Texture" id=1]
[ext_resource path="res://sprites/characters/idle right 2.png" type="Texture" id=2]
[ext_resource path="res://sprites/characters/jump 1.png" type="Texture" id=3]
[ext_resource path="res://sprites/characters/right walk 3.png" type="Texture" id=4]
[ext_resource path="res://sprites/characters/right walk 4.png" type="Texture" id=5]
[ext_resource path="res://sprites/characters/right walk 7.png" type="Texture" id=6]
[ext_resource path="res://sprites/characters/right walk 8.png" type="Texture" id=7]
[ext_resource path="res://sprites/characters/idle right 1.png" type="Texture" id=8]
[ext_resource path="res://sprites/characters/fall.png" type="Texture" id=9]
[ext_resource path="res://sprites/characters/right walk 6.png" type="Texture" id=10]
[ext_resource path="res://sprites/characters/right walk 5.png" type="Texture" id=11]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://sprites/Act1settings/sceneone/back grass.png" type="Texture" id=13]
[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=14]
[ext_resource path="res://sprites/Act1settings/sceneone/front tree.png" type="Texture" id=15]
[ext_resource path="res://sprites/Act1settings/sceneone/house 1.png" type="Texture" id=16]
[ext_resource path="res://sprites/characters/right jump 4.png" type="Texture" id=17]
[ext_resource path="res://sounds/Closing-Squeaky-Door-1-www.fesliyanstudios.com.wav" type="AudioStream" id=18]
[ext_resource path="res://sprites/Act1settings/sceneone/back tree.png" type="Texture" id=19]
[ext_resource path="res://sprites/Act1settings/sceneone/front grass.png" type="Texture" id=20]
[ext_resource path="res://sprites/Act1settings/sceneone/middle tree.png" type="Texture" id=21]
[ext_resource path="res://sprites/Act1settings/sceneone/roady.png" type="Texture" id=22]
[ext_resource path="res://sprites/characters/jump 2.png" type="Texture" id=23]
[ext_resource path="res://sprites/Act1settings/sceneone/bird/Untitled685-20200625194627.PNG" type="Texture" id=24]
[ext_resource path="res://sprites/Act1settings/sceneone/grass1.png" type="Texture" id=25]
[ext_resource path="res://sprites/Act1settings/sceneone/bird/Untitled685-20200625194509.PNG" type="Texture" id=26]
[ext_resource path="res://sounds/Walking-on-Gravel--Medium--www.fesliyanstudios.com.wav" type="AudioStream" id=27]
[ext_resource path="res://Act1/playerscenes/scene1/door.gd" type="Script" id=28]
[ext_resource path="res://player.gd" type="Script" id=29]
[ext_resource path="res://sprites/act 2 setting/scene1/lamp1.png" type="Texture" id=30]
[ext_resource path="res://sprites/act 2 setting/scene1/lamp3.png" type="Texture" id=31]
[ext_resource path="res://Act1/playerscenes/scene1/lamp.gd" type="Script" id=32]
[ext_resource path="res://sprites/Act1settings/sceneone/roady2.png" type="Texture" id=33]
[ext_resource path="res://sprites/Act1settings/sceneone/hole.png" type="Texture" id=34]
[ext_resource path="res://sprites/Act1settings/sceneone/unnamed.png" type="Texture" id=35]
[ext_resource path="res://sprites/UI/sign/Untitled690-20200701120756.PNG" type="Texture" id=36]
[ext_resource path="res://sprites/UI/sign/Untitled690-20200701120801.PNG" type="Texture" id=37]
[ext_resource path="res://Act1/playerscenes/scene1/sign.gd" type="Script" id=38]
[ext_resource path="res://sprites/UI/dialoguebox.png" type="Texture" id=39]
[ext_resource path="res://Act1/playerscenes/scene1/dialoguebox.gd" type="Script" id=40]
[ext_resource path="res://sprites/UI/continuesprite.png" type="Texture" id=41]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=42]
[ext_resource path="res://Act1/playerscenes/scene1/Area2D4.gd" type="Script" id=43]
[ext_resource path="res://Act1/playerscenes/scene1/dialoguebox2.gd" type="Script" id=44]
[ext_resource path="res://sprites/Act1settings/sceneone/arrows2.png" type="Texture" id=45]
[ext_resource path="res://sprites/Act1settings/sceneone/ARROWS.png" type="Texture" id=46]
[ext_resource path="res://Act1/playerscenes/scene1/arrows.gd" type="Script" id=47]
[ext_resource path="res://Act1/playerscenes/scene1/upArrow.gd" type="Script" id=48]
[ext_resource path="res://Act1/playerscenes/scene1/Area2D2.gd" type="Script" id=49]
[ext_resource path="res://sprites/UI/GirlTextbox/arrow1.PNG" type="Texture" id=50]
[ext_resource path="res://sprites/UI/GirlTextbox/arrow.PNG" type="Texture" id=51]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 495.271, 1199.13 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 9594.71, -0.25, 0, 0.25, 0, 10188.1, -0.25, 0, 0.25, 0, 9594.71, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1605.42, -0.25, 0, 0.25, 0, 1618.81, -0.25, 0, 0.25, 0, 1605.42, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}

[sub_resource type="DynamicFont" id=4]
size = 90
font_data = ExtResource( 12 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 249.393, 172.866 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 171.01, 299.887 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 171.919, 273.334 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 50 ), ExtResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 9 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 23 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 92.5304
height = 393.103

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 5944.11, 137.664 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 103.199, 1097.02 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 997.533, 1448.23 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 206.324, 347.55 )

[sub_resource type="DynamicFont" id=22]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=23]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 4061.7, -0.25, 0, 0.25, 0, 4061.7, -0.25, 0, 0.25, 0, 4061.7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1683.75, -0.25, 0, 0.25, 0, 1640, -0.25, 0, 0.25, 0, 1683.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=24]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 4061.7, -0.25, 0, 0.25, 0, 4061.7, -0.25, 0, 0.25, 0, 4061.7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1683.75, -0.25, 0, 0.25, 0, 1640, -0.25, 0, 0.25, 0, 1683.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 150.722, 531.328 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 351.766, 930.81 )

[node name="scene 1" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 7275.51, 1175.17 )
script = ExtResource( 28 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 5898.43, -16.4831 )
scale = Vector2( 1.08766, 1.07289 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5989.59, -128.654 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Area2D"]
margin_left = 4962.95
margin_top = -208.87
margin_right = 5685.95
margin_bottom = 189.132
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.972549, 0.972549, 0.972549, 1 )
text = "enter [Enter]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Area2D"]
stream = ExtResource( 18 )

[node name="paper" type="ParallaxBackground" parent="."]

[node name="paperlayer" type="ParallaxLayer" parent="paper"]

[node name="papersprite" type="Sprite" parent="paper/paperlayer"]
scale = Vector2( 3.68456, 1 )
texture = ExtResource( 25 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="back tree" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.3, 0.3 )

[node name="back tree layer" type="ParallaxLayer" parent="back tree"]

[node name="back tree sprite" type="Sprite" parent="back tree/back tree layer"]
texture = ExtResource( 19 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="back tree sprite2" type="Sprite" parent="back tree/back tree layer"]
position = Vector2( 6852.45, -26.925 )
texture = ExtResource( 19 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="mid tree" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.2, 0.2 )

[node name="mid tree layer" type="ParallaxLayer" parent="mid tree"]

[node name="mid tree sprite" type="Sprite" parent="mid tree/mid tree layer"]
texture = ExtResource( 21 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="mid tree sprite2" type="Sprite" parent="mid tree/mid tree layer"]
position = Vector2( 7421.25, -23.5596 )
texture = ExtResource( 21 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="back grass" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="back grass"]
position = Vector2( 9594.71, 1605.42 )
z_index = -21
texture = ExtResource( 34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="back grass/Sprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )

[node name="back grass layer" type="ParallaxLayer" parent="back grass"]

[node name="back grass sprite" type="Sprite" parent="back grass/back grass layer"]
position = Vector2( 11089.2, -46.0772 )
scale = Vector2( 1.22752, 1 )
texture = ExtResource( 13 )
centered = false

[node name="back grass sprite2" type="Sprite" parent="back grass/back grass layer"]
position = Vector2( -1678.35, 0 )
scale = Vector2( 0.989756, 1 )
texture = ExtResource( 13 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="back grass/back grass layer"]
position = Vector2( 9783.09, 1156.2 )
scale = Vector2( 2.01713, 1.85095 )
texture = ExtResource( 35 )

[node name="road" type="ParallaxBackground" parent="."]

[node name="road layer" type="ParallaxLayer" parent="road"]

[node name="road sprite" type="Sprite" parent="road/road layer"]
position = Vector2( 85.0967, 637.621 )
scale = Vector2( 1.86653, 1.31893 )
texture = ExtResource( 33 )
centered = false

[node name="road sprite2" type="Sprite" parent="road/road layer"]
position = Vector2( 6197.19, 72.0022 )
scale = Vector2( 1.76248, 1.851 )
texture = ExtResource( 22 )
centered = false

[node name="front tree" type="ParallaxBackground" parent="."]
layer = 0

[node name="front tree layer" type="ParallaxLayer" parent="front tree"]

[node name="front tree sprite" type="Sprite" parent="front tree/front tree layer"]
position = Vector2( -397.718, 0 )
z_index = 100
texture = ExtResource( 15 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="front tree sprite2" type="Sprite" parent="front tree/front tree layer"]
position = Vector2( 6629.75, -20.1938 )
z_index = 100
texture = ExtResource( 15 )
centered = false

[node name="front grass" type="ParallaxBackground" parent="."]
layer = 0

[node name="front grass layer" type="ParallaxLayer" parent="front grass"]

[node name="front grasssprite" type="Sprite" parent="front grass/front grass layer"]
texture = ExtResource( 20 )
centered = false

[node name="front grasssprite2" type="Sprite" parent="front grass/front grass layer"]
position = Vector2( 3211.1, 9.5874 )
scale = Vector2( 0.844702, 1 )
texture = ExtResource( 20 )
centered = false

[node name="front grasssprite4" type="Sprite" parent="front grass/front grass layer"]
position = Vector2( 7825.13, 129.636 )
scale = Vector2( 0.844702, 1 )
texture = ExtResource( 20 )
centered = false

[node name="front grasssprite3" type="Sprite" parent="front grass/front grass layer"]
position = Vector2( 11168.3, 44.7183 )
scale = Vector2( 0.844702, 1 )
texture = ExtResource( 20 )
centered = false

[node name="Area2D3" type="Area2D" parent="."]
z_index = -104
z_as_relative = false
script = ExtResource( 38 )

[node name="Label" type="Label" parent="Area2D3"]
margin_left = 2881.7
margin_top = 1087.34
margin_right = 3585.7
margin_bottom = 1215.34
custom_fonts/font = SubResource( 4 )
text = "interact [Space]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D3"]
position = Vector2( 3594.84, 1484.22 )
scale = Vector2( 0.363219, 0.47326 )
z_as_relative = false
frames = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 3184.01, 1734.35 )
shape = SubResource( 6 )

[node name="Area2D4" type="Area2D" parent="."]
script = ExtResource( 43 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D4"]
position = Vector2( 7137.92, 1475.99 )
scale = Vector2( 0.3368, 0.433221 )
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 6756.92, 1812.47 )
shape = SubResource( 8 )

[node name="upArrow" type="KinematicBody2D" parent="."]
visible = false
script = ExtResource( 48 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="upArrow"]
position = Vector2( 409.435, 1095.13 )
rotation = 1.5708
scale = Vector2( 0.390568, 0.555338 )
frames = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="upArrow"]
shape = SubResource( 10 )

[node name="arrows" type="KinematicBody2D" parent="."]
z_index = 8
script = ExtResource( 47 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="arrows"]
position = Vector2( 419.444, 1079.14 )
scale = Vector2( 0.407138, 0.580121 )
z_index = 4
z_as_relative = false
frames = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="arrows"]
position = Vector2( 332.088, 1118.36 )
shape = SubResource( 12 )
disabled = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="arrows"]
position = Vector2( 427.557, 962.451 )
scale = Vector2( 0.400537, 0.311725 )
frames = SubResource( 13 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 2576.72, 701.071 )
z_as_relative = false
script = ExtResource( 29 )
__meta__ = {
"_edit_group_": true
}

[node name="playerSprite" type="AnimatedSprite" parent="player"]
position = Vector2( -2169.96, 957.149 )
scale = Vector2( 0.869016, 0.900177 )
z_as_relative = false
frames = SubResource( 14 )
animation = "jump"
speed_scale = 1.5

[node name="playerCollision" type="CollisionShape2D" parent="player"]
light_mask = 3
position = Vector2( -2207.59, 1016.72 )
shape = SubResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( -1805.12, 923.949 )
current = true
limit_left = 0
limit_top = 0
limit_right = 13500
limit_bottom = 2160

[node name="Walk" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 27 )
volume_db = 2.0

[node name="vignette" type="ParallaxBackground" parent="."]
layer = 128

[node name="vignette layer" type="ParallaxLayer" parent="vignette"]

[node name="vignette sprite" type="Sprite" parent="vignette/vignette layer"]
position = Vector2( -64.4035, -36.1411 )
scale = Vector2( 1.80272, 1.04579 )
z_index = 100
texture = ExtResource( 14 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 4209.42, 2101.33 )
shape = SubResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 16492.9, 2087.27 )
shape = SubResource( 16 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 41.0424, 1220.69 )
shape = SubResource( 17 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 13922.5, 953.556 )
shape = SubResource( 18 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3657.56, 1406.76 )
z_index = 2
frames = SubResource( 19 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 6065.61, 952.736 )
scale = Vector2( 1.04841, 1.1256 )
z_index = 2
frames = SubResource( 20 )
frame = 3
playing = true
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 2712.67, 648.158 )
rotation = -0.404916
scale = Vector2( 0.666533, 0.709781 )
z_index = 2
frames = SubResource( 20 )
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource( 49 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 10365.8, 2492.36 )
shape = SubResource( 21 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 2
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="dialoguebox" type="Control" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ParallaxBackground/ParallaxLayer/dialoguebox"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer/dialoguebox"]
margin_left = 2249.36
margin_top = 1569.36
margin_right = 4951.36
margin_bottom = 2069.36
texture = ExtResource( 39 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ParallaxBackground/ParallaxLayer/dialoguebox"]
margin_left = 2396.0
margin_top = 1684.0
margin_right = 4802.0
margin_bottom = 1964.0
custom_fonts/normal_font = SubResource( 22 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer/dialoguebox"]
position = Vector2( 4061.7, 1683.75 )
scale = Vector2( 1.08605, 1.52893 )
texture = ExtResource( 41 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 23 )

[node name="Type" type="AudioStreamPlayer" parent="ParallaxBackground/ParallaxLayer/dialoguebox"]
stream = ExtResource( 42 )

[node name="dialoguebox2" type="Control" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 3455.95
margin_top = -2.51099
margin_right = 5335.95
margin_bottom = 687.489
script = ExtResource( 44 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer/dialoguebox2"]
margin_left = 2249.36
margin_top = 1569.36
margin_right = 4951.36
margin_bottom = 2069.36
texture = ExtResource( 39 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ParallaxBackground/ParallaxLayer/dialoguebox2"]
margin_left = 2396.0
margin_top = 1684.0
margin_right = 4802.0
margin_bottom = 1964.0
custom_fonts/normal_font = SubResource( 22 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer/dialoguebox2"]
position = Vector2( 4061.7, 1683.75 )
scale = Vector2( 1.08605, 1.52893 )
texture = ExtResource( 41 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer/dialoguebox2/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 24 )

[node name="Type" type="AudioStreamPlayer" parent="ParallaxBackground/ParallaxLayer/dialoguebox2"]
stream = ExtResource( 42 )

[node name="Tween" type="Tween" parent="ParallaxBackground/ParallaxLayer/dialoguebox2"]

[node name="lamp" type="Area2D" parent="."]
script = ExtResource( 32 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="lamp"]
position = Vector2( 14213.6, 1042.87 )
z_index = -1
frames = SubResource( 25 )
animation = "off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="lamp"]
position = Vector2( 11964.1, 1333.13 )
shape = SubResource( 26 )

[node name="jump" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="jump"]
position = Vector2( 9912.08, 1355.4 )
shape = SubResource( 27 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D3" to="Area2D3" method="_on_Area2D3_body_entered"]
[connection signal="body_entered" from="Area2D3" to="ParallaxBackground/ParallaxLayer/dialoguebox" method="_on_Area2D3_body_entered"]
[connection signal="body_exited" from="Area2D3" to="Area2D3" method="_on_Area2D3_body_exited"]
[connection signal="body_exited" from="Area2D3" to="ParallaxBackground/ParallaxLayer/dialoguebox" method="_on_Area2D3_body_exited"]
[connection signal="body_entered" from="Area2D4" to="Area2D4" method="_on_Area2D4_body_entered"]
[connection signal="body_entered" from="Area2D4" to="ParallaxBackground/ParallaxLayer/dialoguebox2" method="_on_Area2D4_body_entered"]
[connection signal="body_exited" from="Area2D4" to="Area2D4" method="_on_Area2D4_body_exited"]
[connection signal="body_exited" from="Area2D4" to="ParallaxBackground/ParallaxLayer/dialoguebox2" method="_on_Area2D4_body_exited"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_Area2D2_body_entered"]
[connection signal="tween_completed" from="ParallaxBackground/ParallaxLayer/dialoguebox/Tween" to="ParallaxBackground/ParallaxLayer/dialoguebox" method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="ParallaxBackground/ParallaxLayer/dialoguebox2/Tween" to="ParallaxBackground/ParallaxLayer/dialoguebox2" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="lamp" to="lamp" method="_on_lamp_body_entered"]
[connection signal="body_exited" from="lamp" to="lamp" method="_on_lamp_body_exited"]
[connection signal="body_entered" from="jump" to="upArrow" method="_on_jump_body_entered"]
[connection signal="body_exited" from="jump" to="upArrow" method="_on_jump_body_exited"]
